--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
     <title>Login - Admin Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="{{ url_for('static', filename='js/validation.js') }}"></script>
 </head>
 <body>
     <div class="login-container">
@@ -24,7 +25,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <form class="login-form" action="{{ url_for('login') }}" method="POST">
+            <form id="loginForm" class="login-form" action="{{ url_for('login') }}" method="POST">
                 <div class="form-group">
                     <label for="identifier">Identifier</label>
                     <div class="input-group">
@@ -80,16 +81,6 @@
     }
 
     .login-header p {
-        color: var(--text-secondary);
-    }
-
-    .form-group {
-        margin-bottom: 1.5rem;
-    }
-
-    .form-group label {
-        display: block;
-        margin-bottom: 0.5rem;
         color: var(--text-secondary);
     }
 
@@ -149,6 +140,18 @@
 
     <script>
         feather.replace();
+
+        // Setup login form validation
+        setupFormValidation('loginForm', {
+            'identifier': [
+                ValidationRules.required,
+                ValidationRules.minLength(3)
+            ],
+            'password': [
+                ValidationRules.required,
+                ValidationRules.minLength(6)
+            ]
+        });
     </script>
 </body>
 </html>
